--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nodemailer": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
